Add sections and start styles

--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href=""styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <ul>
+            <li class="logo">Header Logo</li>
+            <li class="header-link">header link one</li>
+            <li class="header-link">header link two</li>
+            <li class="header-link">header link three</li>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="section">
+            
+        </div>
+        <div class="section">
+
+        </div>
+        <div class="section">
+
+        </div>
+    </div>
+    <div class="footer">
+        Copyright &#169 The Odin Project 2022
+    </div>
 </body>
 </html>
