Add more sections and more styles

--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
     <div class="header">
         <ul>
             <li class="logo">Header Logo</li>
-            <li class="header-link">header link one</li>
-            <li class="header-link">header link two</li>
-            <li class="header-link">header link three</li>
+            <li class="header-link right"><a href="#">header link one</a></li>
+            <li class="header-link"><a href="#">header link two</a></li>
+            <li class="header-link"><a href="#">header link three</a></li>
         </ul>
     </div>
     <div class="content">
-        <div class="section">
-            
+        <div class="section1">
+            <div class="hero-text">
+                <div class="hero">This website is awesome</div>
+                <div class="hero-subtext">
+                    This website has some subtext that goes
+                    here under the main title. It's a smaller font
+                    and the color is lower contrast.
+                </div>
+                <div class="signup">Sign Up</div>
+            </div>
+            <img alt="image placeholder">
         </div>
-        <div class="section">
+        <div class="section2">
 
         </div>
-        <div class="section">
+        <div class="section3">
 
         </div>
     </div>
