Add more style changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     here under the main title. It's a smaller font
                     and the color is lower contrast.
                 </div>
-                <div class="signup">Sign Up</div>
+                <button class="signup">Sign Up</button>
             </div>
             <img alt="image placeholder">
         </div>
