Add stye to first section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             <img alt="image placeholder">
         </div>
         <div class="section2">
-
+            <div class="title">Some random information.</div>
+            <div class="images">
+                <div class="block"></div>
+            </div>
         </div>
         <div class="section3">
 
