Add style to second section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
         <div class="section2">
             <div class="title">Some random information.</div>
             <div class="images">
-                <div class="block"></div>
+                <div class="block">
+                    <img class="small-image" alt="image">
+                    <div class="caption">this is some subtext under an illustration image</div>
+                </div>
+                <div class="block">
+                    <img class="small-image" alt="image">
+                    <div class="caption">this is some subtext under an illustration image</div>
+                </div>
+                <div class="block">
+                    <img class="small-image" alt="image">
+                    <div class="caption">this is some subtext under an illustration image</div>
+                </div>
+                <div class="block">
+                    <img class="small-image" alt="image">
+                    <div class="caption">this is some subtext under an illustration image</div>
+                </div>
             </div>
         </div>
         <div class="section3">
