--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="title">Some random information.</div>
             <div class="images">
                 <div class="block">
-                    <img class="small-image" alt="image">
+                    <img src="images/windows.jpg" class="small-image" alt="image">
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
-                    <img class="small-image" alt="image">
+                    <img src="images/tech.jpg"class="small-image" alt="image">
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
@@ -51,7 +51,14 @@
             </div>
         </div>
         <div class="section3">
-
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="signature">
+                -Thor, God of Thunder
+            </div>
         </div>
     </div>
     <div class="footer">
