--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <button class="signup">Sign Up</button>
             </div>
-            <img src="/images/windows.jpg" alt="image placeholder">
+            <img src="/images/windows.jpg" class="small-images" alt="image placeholder">
         </div>
         <div class="section2">
             <div class="title">Some random information.</div>
@@ -37,11 +37,11 @@
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
-                    <img src="images/tech.jpg"class="small-image" alt="image">
+                    <img src="images/tech.jpg" class="small-image" alt="image">
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
-                    <img src="images/cool-building.jpg"class="small-image" alt="image">
+                    <img src="images/cool-building.jpg" class="small-image" alt="image">
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
