--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <button class="signup">Sign Up</button>
             </div>
-            <img src="/images/windows.jpg" class="small-images" alt="image placeholder">
+            <img src="images/la.jpg" alt="image placeholder">
         </div>
         <div class="section2">
             <div class="title">Some random information.</div>
@@ -52,9 +52,9 @@
         </div>
         <div class="section3">
             <div class="quote">
-                This is an inspiring quote, or a testimonial from a customer.
+                "This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.
+                read it. Who knows? All I know is that it looks nice."
             </div>
             <div class="signature">
                 -Thor, God of Thunder
