Fix quote block and start section4

--- a/index.html
+++ b/index.html
@@ -51,14 +51,26 @@
             </div>
         </div>
         <div class="section3">
-            <div class="quote">
-                "This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice."
+            <div class="quote-block">
+                <div class="quote">
+                    "This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually
+                    read it. Who knows? All I know is that it looks nice."
+                </div>
+                <div class="signature">
+                    -Thor, God of Thunder
+                </div>
             </div>
-            <div class="signature">
-                -Thor, God of Thunder
+        </div>
+        <div class="section4">
+            <div class="action">
+                Call to action! It's time!
             </div>
+            <div class="action-caption">
+                Sign up for our product by clicking that
+                button right over there.
+            </div>
+            <div class="signup"> Sign up</div>
         </div>
     </div>
     <div class="footer">
