Create call to action

--- a/index.html
+++ b/index.html
@@ -63,14 +63,19 @@
             </div>
         </div>
         <div class="section4">
-            <div class="action">
-                Call to action! It's time!
+            <div class="action-block">
+                <div class="action-text">
+                    <div class="action">
+                        Call to action! It's time!
+                    </div>
+                    <div class="action-caption">
+                        Sign up for our product by clicking that
+                        button right over there.
+                    </div>
+                </div>
+                <button class="signup"> Sign up</button>
             </div>
-            <div class="action-caption">
-                Sign up for our product by clicking that
-                button right over there.
-            </div>
-            <div class="signup"> Sign up</div>
+
         </div>
     </div>
     <div class="footer">
