--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
                 <div class="block">
-                    <img class="small-image" alt="image">
+                    <img src="images/rocks.jpg"class="small-image" alt="image">
                     <div class="caption">this is some subtext under an illustration image</div>
                 </div>
             </div>
